--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.0",
     "wait-on": "^6.0.1",
